@@ -103,6 +103,17 @@ test -z "$AUTORECONF" && AUTORECONF="@am_AUTORECONF@"
 test -z "$AUTOHEADER" && AUTOHEADER="@am_AUTOHEADER@"
 test -z "$AUTOUPDATE" && AUTOUPDATE="@am_AUTOUPDATE@"
 test -z "$MISSING" && MISSING=`pwd`/../lib/missing
+
+# This is a hack to seamlessly support the infamous "autoconf wrappers",
+# that might dispatch different autoconf versions depending on the name
+# of the input files and/or the command-line options used.  See:
+# <http://lists.gnu.org/archive/html/automake/2011-12/msg00039.html>
+# FIXME: in the long run, the better fix will be to convert our testsuite
+# to use `configure.ac' instead of `configure.in' as autoconf input.
+AUTOCONF="$AUTOCONF -B /no/such/dir"
+AUTOM4TE="$AUTOM4TE -B /no/such/dir"
+AUTORECONF="$AUTORECONF -B /no/such/dir"
+
 # Use -Werror because this also turns some Perl warnings into error.
 # (Tests for which this is inappropriate should use -Wno-error.)
 test -z "$ACLOCAL" && ACLOCAL="aclocal-$APIVERSION -Werror"
