@@ -1,5 +1,17 @@
 2011-12-16  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	test defs: hack to support autoconf-wrapper programs
+	* tests/defs.in ($AUTOCONF): Add a dummy `-B' option to the
+	autoconf invocation, so that, when the Debian autoconf wrapper
+	is involved, it will correctly dispatch an autoconf >= 2.50
+	instead of defaulting to autoconf 2.13.
+	($AUTOHEADER, $AUTORECONF): Likewise, but for autoheader and
+	autoreconf respectively.
+	Reported by Bruno Haible:
+	<http://lists.gnu.org/archive/html/automake/2011-12/msg00039.html>
+
+2011-12-16  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tests: fix a minor spurious failure with FreeBSD make
 	* tests/remake-am-pr10111.test: Avoid using `#' comments in
 	makefile recipes, as these have been confusing FreeBSD make.
